@@ -1,6 +1,7 @@
 0.04
  - Add Task::PYX to SEE ALSO section in doc.
  - Move pyx2graphviz to App::PYX::GraphViz distribution.
+ - Update Module::Install to 1.16 version.
 
 0.03 2015-01-18T17:44:55+01:00
  - Update copyright years.
